RESOLVED FIXED71564
[EFL] Invalidation request for ewk_view can be discarded without rendering.
https://bugs.webkit.org/show_bug.cgi?id=71564
Summary [EFL] Invalidation request for ewk_view can be discarded without rendering.
KwangHyuk
Reported 2011-11-04 09:07:24 PDT
As ewk_view_layout_if_needed_recursive API causes invalidation request for the web view via ChromeClient, some invalidation requests can be discarded without rendering as long as it would be called after ewk_view_repaints_get api. As for the ewk_view_single, this matter was fixed. But ewk_view_tiled still has had same issues. So, this issues must be solved in ewk_view_tiled too.
Attachments
Patch. (5.74 KB, patch)
2011-11-15 02:25 PST, KwangHyuk
no flags
Patch. (5.79 KB, patch)
2011-11-15 03:42 PST, KwangHyuk
no flags
Patch rebased. (5.13 KB, patch)
2011-12-19 17:33 PST, KwangHyuk
gyuyoung.kim: commit-queue-
Patch fixed. (5.86 KB, patch)
2011-12-19 19:36 PST, KwangHyuk
no flags
Simple test page related with this issue. (3.38 KB, application/octet-stream)
2011-12-25 22:48 PST, KwangHyuk
no flags
patch rebased. (6.15 KB, patch)
2011-12-26 00:14 PST, KwangHyuk
no flags
title updated. (6.16 KB, patch)
2011-12-26 00:23 PST, KwangHyuk
no flags
Patch updated. (5.90 KB, patch)
2011-12-26 22:33 PST, KwangHyuk
no flags
Patch rebased. (5.91 KB, patch)
2012-01-01 20:27 PST, KwangHyuk
no flags
Patch rebased. (5.96 KB, patch)
2012-01-04 17:59 PST, KwangHyuk
no flags
KwangHyuk
Comment 1 2011-11-15 02:25:24 PST
WebKit Review Bot
Comment 2 2011-11-15 02:27:38 PST
Attachment 115130 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/efl/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/efl/ewk/ewk_view.cpp:299: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
KwangHyuk
Comment 3 2011-11-15 03:42:57 PST
KwangHyuk
Comment 4 2011-11-16 23:10:39 PST
Review me please. :)
Raphael Kubo da Costa (:rakuco)
Comment 5 2011-11-17 08:23:31 PST
Do you have some test case for this?
KwangHyuk
Comment 6 2011-11-17 17:00:20 PST
(In reply to comment #5) > Do you have some test case for this? Hi, Kubo, First of all, thank you for your review. :) As you remember, in fact, this bug was created because of your idea that you mentioned for bug 70170 before. As I recovered the code before bug 70170 was applied, you can use same test site like daum.net and http://ie.microsoft.com/testdrive/Graphics/RequestAnimationFrame/Default.html by use ewk_view_single. And this patch is commonly working for both single and tiled view too. I hope to get your idea for the code first whether this patch looks reasonable. Finally, If you want to see more simple test page, I can try it.
Raphael Kubo da Costa (:rakuco)
Comment 7 2011-11-17 17:14:45 PST
Hi there. I find rendering related code very tricky, be it in ewk or in (especially) WebCore itself. As I was not involved in the writing of this part of the code in the port, it is even more difficult to assess what is going on behind the scenes in order to review it well. This is why it would be really helpful if you could produce a small test case -- sites such as microsoft's or daum's have a lot of other, unrelated code which make it hard to isolate the problem. With a small test case whose only purpose is to trigger this problem, we can even integrate it into LayoutTests/ so that this problem does not show up again (besides also making it easy to review the patch as I then have a small file to make some tests).
KwangHyuk
Comment 8 2011-11-17 17:21:50 PST
(In reply to comment #7) > Hi there. > > I find rendering related code very tricky, be it in ewk or in (especially) WebCore itself. As I was not involved in the writing of this part of the code in the port, it is even more difficult to assess what is going on behind the scenes in order to review it well. This is why it would be really helpful if you could produce a small test case -- sites such as microsoft's or daum's have a lot of other, unrelated code which make it hard to isolate the problem. With a small test case whose only purpose is to trigger this problem, we can even integrate it into LayoutTests/ so that this problem does not show up again (besides also making it easy to review the patch as I then have a small file to make some tests). Ok, Let me generate any simple test soon. :)
KwangHyuk
Comment 9 2011-12-19 17:33:55 PST
Created attachment 119962 [details] Patch rebased.
Gyuyoung Kim
Comment 10 2011-12-19 19:14:46 PST
Comment on attachment 119962 [details] Patch rebased. Attachment 119962 [details] did not pass efl-ews (efl): Output: http://queues.webkit.org/results/10961226
KwangHyuk
Comment 11 2011-12-19 19:36:47 PST
Created attachment 119976 [details] Patch fixed.
KwangHyuk
Comment 12 2011-12-25 22:48:22 PST
Created attachment 120527 [details] Simple test page related with this issue. Simple test page was generated.
KwangHyuk
Comment 13 2011-12-26 00:14:10 PST
Created attachment 120533 [details] patch rebased.
KwangHyuk
Comment 14 2011-12-26 00:23:38 PST
Created attachment 120534 [details] title updated.
Gyuyoung Kim
Comment 15 2011-12-26 18:43:14 PST
Comment on attachment 120534 [details] title updated. View in context: https://bugs.webkit.org/attachment.cgi?id=120534&action=review Though I'm not specialist for this area, Looks better than before. > Source/WebKit/efl/ewk/ewk_view.cpp:295 > Eina_Rectangle* rect; Why don't you move above code to 312 line ? As you know, C++ declares it when it is used.
KwangHyuk
Comment 16 2011-12-26 22:33:12 PST
Created attachment 120566 [details] Patch updated.
Gyuyoung Kim
Comment 17 2011-12-26 23:17:25 PST
Comment on attachment 120566 [details] Patch updated. Though I'm not specialist for this area, looks better before.
KwangHyuk
Comment 18 2012-01-01 20:27:49 PST
Created attachment 120858 [details] Patch rebased.
KwangHyuk
Comment 19 2012-01-04 17:59:04 PST
Created attachment 121195 [details] Patch rebased.
Hajime Morrita
Comment 20 2012-01-04 21:37:56 PST
Comment on attachment 121195 [details] Patch rebased. Rubberstamping.
WebKit Review Bot
Comment 21 2012-01-05 07:01:52 PST
Comment on attachment 121195 [details] Patch rebased. Clearing flags on attachment: 121195 Committed r104160: <http://trac.webkit.org/changeset/104160>
WebKit Review Bot
Comment 22 2012-01-05 07:01:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.